<resources>
    <string name="comments_title">Commentaires</string>
    <string name="game_rate_title">Noter le jeu</string>
    <string name="game_image_desc">Game poster</string>
    <string name="app_name">Spire</string>
    <string name="home">Home</string>
    <string name="friends">Friends</string>
    <string name="highlighted_title">Highlights</string>
    <string name="settings">Settings</string>
    <string name="game_sheet">Fiche de jeu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string-array name="games_name">
        <item>Far Cry 6</item>
        <item>Forza Horizon 5</item>
        <item>Battlefield 2042</item>
        <item>The Witcher 3: Wild Hunt</item>
        <item>The Elder Scrolls V: Skyrim</item>
        <item>FIFA 22</item>
        <item>Resident Evil VILLAGE</item>
        <item>Deathloop</item>
        <item>Halo Infinite</item>
        <item>NBA 2K22</item>
    </string-array>

    <string-array name="games_publisher">
        <item>Ubisoft</item>
        <item>Xbox Game Studios</item>
        <item>Electronic Arts</item>
        <item>CD Projekt</item>
        <item>Bethesda</item>
        <item>Electronic Arts</item>
        <item>Capcom</item>
        <item>Bethesda</item>
        <item>Xbox Game Studios</item>
        <item>Take Two</item>
    </string-array>

    <string-array name="games_publishing_year">
        <item>2021</item>
        <item>2021</item>
        <item>2021</item>
        <item>2015</item>
        <item>2011</item>
        <item>2021</item>
        <item>2021</item>
        <item>2021</item>
        <item>2021</item>
        <item>2021</item>
    </string-array>

    <string-array name="friends_name">
        <item>François</item>
        <item>Franck</item>
        <item>Baptiste</item>
        <item>Théo</item>
        <item>Thomas</item>
        <item>Mathieu</item>
        <item>Mathéo</item>
        <item>Daniel</item>
        <item>Pierre</item>
        <item>Noa</item>
        <item>François</item>
        <item>Franck</item>
        <item>Baptiste</item>
        <item>Théo</item>
        <item>Thomas</item>
        <item>Mathieu</item>
        <item>René</item>
        <item>Daniel</item>
        <item>Pierre</item>
        <item>Noa</item>
    </string-array>

    <string-array name="my_games"></string-array>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="spire">Spire</string>
    <string name="identifiant">Identifiant</string>
    <string name="password">Mot de passe</string>
    <string name="connexion">Connexion</string>
    <string name="forgot_password">Mot de passe oublié ?</string>
    <string name="create_account">Créer un compte</string>
    <string name="logo_spire">Logo Spire</string>
    <string name="register_title">Inscription</string>
    <string name="mail_hint">Adresse mail</string>
</resources>