<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/globalLoginLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="693dp"
                android:background="@drawable/background_login"
                android:transitionName="logo_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageViewLogo"
                        android:layout_width="270dp"
                        android:layout_height="190dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:contentDescription="@string/logo_spire"
                        android:src="@drawable/logospire"
                        app:layout_constraintBottom_toTopOf="@+id/textView"
                        tools:ignore="ImageContrastCheck" />

                    <TextView
                        android:id="@+id/appNameTextView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:fontFamily="@font/ubuntu"
                        android:text="@string/register_title"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="35sp">

                    </TextView>
                    <com.google.android.material.textfield.TextInputLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:layout_margin="10dp"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:hint="@string/mail_hint">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/mail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:singleLine="true">

                        </com.google.android.material.textfield.TextInputEditText>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:hint="Mot de passe"
                        app:passwordToggleEnabled="true">
                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:id="@+id/password"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword">

                        </com.google.android.material.textfield.TextInputEditText>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_register"
                        style="@style/Widget.MaterialComponents.Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:paddingLeft="100dp"
                        android:paddingRight="100dp"
                        android:text="S'inscrire"
                        android:textColor="@color/white"
                        app:cornerRadius="15dp"/>



                </LinearLayout>
            </RelativeLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

