<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.GameSheetFragment">


    <ScrollView
        android:id="@+id/root_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/game_sheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="0dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/game_image"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/game_image_desc"
                    android:src="@drawable/game_poster" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/game_score_public"
                        android:layout_width="match_parent"
                        android:layout_height="140dp"
                        android:gravity="center"
                        android:text="GLOBAL GAME SCORE"
                        android:textSize="40sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/game_title"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:gravity="center"
                        android:text="GAME TITLE"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/game_publisher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="GAME PUBLISHER | YEAR"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/game_advancement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="GAME ADVANCEMENT"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/game_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:maxLines="50"
                android:ellipsize="end"
                android:text="SUMMARY Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla et nisi libero. Donec mollis eros sit amet libero pretium, eu ultricies lectus facilisis. Nulla pellentesque libero quis nisl egestas, vel viverra diam dictum. Sed dapibus faucibus ex, vel malesuada nisi rutrum eget. Suspendisse quis mi mollis, finibus libero quis, efficitur augue. Nullam pellentesque fringilla orci, ut ornare mauris finibus nec. Curabitur ut scelerisque ipsum, eget fermentum magna. " />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/game_rate_title"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RatingBar
                android:id="@+id/game_rating_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:progressBackgroundTint="#CCCCCC"
                android:progressTint="#D4AF37"
                android:rating="0"
                android:secondaryProgressTint="#D4AF37"
                android:stepSize="1" />
            <!--AJOUTER UN COMMENTAIRE :
            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="add_comment"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceHeadline4"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="comment_name_edit_text"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_flower_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/comments_title"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/game_score_user"
                    android:layout_width="60dp"
                    android:layout_height="100dp"
                    android:gravity="center"
                    android:text="GAME SCORE FROM A USER"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/game_comment_user"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:text="One of the best games I’ve ever played. The soundtrack, the story, the world building, all amazing!"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:src="@drawable/ic_add_circle"
        app:backgroundTint="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>